--- a/bookstore.html
+++ b/bookstore.html
@@ -3,8 +3,8 @@
 <bookstore>
 
 <book>
-  <title lang="en">Harry Potter</title>
-  <price>29.99</price>
+  <title lang="en">Harry Potter i Komnata Tajemnic</title>
+  <price>21.37</price>
 </book>
 
 <book>
